--- a/lab2/index.html
+++ b/lab2/index.html
@@ -42,6 +42,14 @@
             </div>
         </div>
     </div>
+    <audio src="assets/mixkit-arcade-retro-game-over-213.wav" id="audio"></audio>
+    <audio src="assets/mixkit-cinematic-transition-swoosh-heartbeat-trailer-488.wav"></audio>
+    <audio src="assets/mixkit-dog-barking-twice-1.wav"></audio>
+    <audio src="assets/mixkit-double-little-bird-chirp-21.wav"></audio>
+    <audio src="assets/mixkit-fast-small-sweep-transition-166.wav"></audio>
+    <audio src="assets/mixkit-martial-arts-fast-punch-2047.wav"></audio>
+    <audio src="assets/mixkit-retro-game-notification-212.wav"></audio>
+    <audio src="assets/mixkit-tropical-forest-bird-chirp-22.wav"></audio>
     <script src="index.js"></script>
 </body>
 </html>
