--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,46 +10,46 @@
 <body>
     <div class="wrapper">
         <div class="soundPad">
-            <div class="pad">q</div>
-            <div class="pad">w</div>
-            <div class="pad">e</div>
-            <div class="pad">r</div>
-            <div class="pad">a</div>
-            <div class="pad">s</div>
-            <div class="pad">d</div>
-            <div class="pad">f</div>
+            <div class="pad" data-key="q">q</div>
+            <div class="pad" data-key="w">w</div>
+            <div class="pad" data-key="e">e</div>
+            <div class="pad" data-key="r">r</div>
+            <div class="pad" data-key="a">a</div>
+            <div class="pad" data-key="s">s</div>
+            <div class="pad" data-key="d">d</div>
+            <div class="pad" data-key="f">f</div>
         </div>
         <div class="recordingBoard">
             <div class="recordingLine">
                 <h5 class="label">line 1</h5>
-                <button class="record">rec</button>
-                <button class="play">play</button>
+                <button class="record" data-channel-rec="1">rec</button>
+                <button class="play" data-channel-play="1">play</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 2</h5>
-                <button class="record">rec</button>
-                <button class="play">play</button>
+                <button class="record" data-channel-rec="2">rec</button>
+                <button class="play" data-channel-play="2">play</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 3</h5>
-                <button class="record">rec</button>
-                <button class="play">play</button>
+                <button class="record" data-channel-rec="3">rec</button>
+                <button class="play" data-channel-play="3">play</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 4</h5>
-                <button class="record">rec</button>
-                <button class="play">play</button>
+                <button class="record" data-channel-rec="4">rec</button>
+                <button class="play" data-channel-play="4">play</button>
             </div>
         </div>
     </div>
-    <audio src="assets/mixkit-arcade-retro-game-over-213.wav" id="audio"></audio>
-    <audio src="assets/mixkit-cinematic-transition-swoosh-heartbeat-trailer-488.wav"></audio>
-    <audio src="assets/mixkit-dog-barking-twice-1.wav"></audio>
-    <audio src="assets/mixkit-double-little-bird-chirp-21.wav"></audio>
-    <audio src="assets/mixkit-fast-small-sweep-transition-166.wav"></audio>
-    <audio src="assets/mixkit-martial-arts-fast-punch-2047.wav"></audio>
-    <audio src="assets/mixkit-retro-game-notification-212.wav"></audio>
-    <audio src="assets/mixkit-tropical-forest-bird-chirp-22.wav"></audio>
+    <audio src="assets/boom.wav"></audio>
+    <audio src="assets/clap.wav"></audio>
+    <audio src="assets/hihat.wav"></audio>
+    <audio src="assets/kick.wav"></audio>
+    <audio src="assets/openhat.wav"></audio>
+    <audio src="assets/ride.wav"></audio>
+    <audio src="assets/snare.wav"></audio>
+    <audio src="assets/tink.wav"></audio>
     <script src="index.js"></script>
 </body>
 </html>
