adding new exercise

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -24,24 +24,36 @@
                 <h5 class="label">line 1</h5>
                 <button class="record" data-channel-rec="1">rec</button>
                 <button class="play" data-channel-play="1">play</button>
+                <div class="ProgressStatus">
+                    <div class="progressBar" id="progress-bar-1"></div>
+                </div>
                 <button class="delete" data-channel-del="1">delete</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 2</h5>
                 <button class="record" data-channel-rec="2">rec</button>
                 <button class="play" data-channel-play="2">play</button>
+                <div class="ProgressStatus">
+                    <div class="progressBar" id="progress-bar-2"></div>
+                </div>
                 <button class="delete" data-channel-del="2">delete</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 3</h5>
                 <button class="record" data-channel-rec="3">rec</button>
                 <button class="play" data-channel-play="3">play</button>
+                <div class="ProgressStatus">
+                    <div class="progressBar" id="progress-bar-3"></div>
+                </div>
                 <button class="delete" data-channel-del="3">delete</button>
             </div>
             <div class="recordingLine">
                 <h5 class="label">line 4</h5>
                 <button class="record" data-channel-rec="4">rec</button>
                 <button class="play" data-channel-play="4">play</button>
+                <div class="ProgressStatus">
+                    <div class="progressBar" id="progress-bar-4"></div>
+                </div>
                 <button class="delete" data-channel-del="4">delete</button>
             </div>
         </div>
