creating Note class

--- a/notekeep/src/index.html
+++ b/notekeep/src/index.html
@@ -33,7 +33,9 @@
             </div>
             <button type="submit" class="form-btn">add note</button>
         </form>
-        <div class="cards"></div>
+        <div class="notes">
+
+        </div>
     </main>
     <script src="index.js"></script>
 </body>
