adding rendering note fn

--- a/notekeep/src/index.html
+++ b/notekeep/src/index.html
@@ -33,7 +33,7 @@
             </div>
             <button type="submit" class="form-btn">add note</button>
         </form>
-        <div class="notes">
+        <div class="notes" id="notes">
         </div>
     </main>
     <script src="index.js"></script>
